--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 node_modules
 .next
 .DS_Store
+
+build/
+
+public/precache.*.*.js
+public/sw.js
+public/workbox-*.js
+public/worker-*.js
+public/fallback-*.js
+public/precache.*.*.js.map
+public/sw.js.map
+public/workbox-*.js.map
+public/worker-*.js.map
+public/fallback-*.js
