--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "benefit-calc",
+  "name": "calcs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://justpilz.github.io/calcs",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 192.168.1.2",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -18,15 +19,17 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@dotmind/react-use-pwa": "^1.0.4",
     "clsx": "^1.2.1",
     "next": "^13.1.6",
+    "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "tailwind-merge": "^1.9.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.3.0",
+    "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^16.2.4",
     "@svgr/webpack": "^6.5.1",
     "@tailwindcss/forms": "^0.5.3",
